refactor: Collectors.toList() -> toList()로 변경